Fri Nov 13 11:29:22 1998  Owen Taylor  <otaylor@redhat.com>

	* gnome-rootwin.c: Include gdkx.h not gdkprivate.h

1998-11-11  Havoc Pennington  <hp@pobox.com>

	* gnome-geometry.c (gnome_geometry_string): Use
	gdk_window_get_root_origin().

1998-11-10  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-popup-menu.c (popup_connect_func): Only connect to the
	signal if the callback is not NULL.
	(gnome_popup_menu_do_popup): If the event is NULL, use button 0
	and GDK_CURRENT_TIME to pop up the menu.
	(gnome_popup_menu_do_popup_modal): New public function to run a
	popup menu modally, and return the index of the selected item.

	* gnome-app-helper.c (do_ui_signal_connect): Only connect to the
	signal if the callback is not NULL.

Wed Nov  4 11:31:57 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk-socket.c (gtk_socket_filter_func): Call 
	gdk_window_destroy_notify() on a DestroyNotify, so
	that the window gets removed from the XID table.

1998-11-09  Jeff Garzik  <jgarzik@pobox.com>

        * libgnomeui/Makefile.am,
          libgnomeui/gnome-dateedit.c, libgnomeui/gtkcalendar.c,
          libgnomeui/gtkcalendar.h, libgnomeui/libgnomeui.h:

                Removed gtkcalendar module.

1998-11-09  Jonathan Blandford  <jrb@aware-of-vacuity.labs.redhat.com>

	* gnome-popup-help.c (gnome_popup_help_expose): added theme'd
	drawing code back to the popup-window.

1998-11-08  Havoc Pennington  <hp@pobox.com>

	* gnome-canvas.c (gnome_canvas_group_draw): 
	In determining whether to redraw each child, the group was
	comparing its own bounds to the redraw area on each iteration,
	ignoring the child's bounds. So all children were redrawn in every
	case. Fixed this typo from hell after staying up all night trying
	to figure out why my app was so slow.

1998-11-07  Jeff Garzik  <jgarzik@pobox.com>

	* Makefile.am, libgnomeui.h: removed gnome-lamp.[ch]
	* stock_demo.c: removed ifdef'd gnome_lamp widget code
	* winhints_demo.c: made authors var const-correct